[package]
name = "gooner"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
crossterm = "0.28.1"
devicons = "0.6.12"
full = "0.3.0"
hex = "0.4.3"
open = "5.3.2"
ratatui = "0.29.0"
rayon = "1.10.0"
serde = "1.0.217"
serde_json = "1.0.137"
tokio = {version = "1.43.0", features = ["full"]}
